Re-do photo capturing

--- a/EyeBot/EyeBot/Base.lproj/Main.storyboard
+++ b/EyeBot/EyeBot/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0Ij-QB-7Lp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,17 +22,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="mNz-Nh-i5c">
-                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="veI-cl-tNv">
-                            <connections>
-                                <action selector="takePhoto:" destination="BYZ-38-t0r" id="5FC-5b-UBO"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="mNz-Nh-i5c"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1446" y="-544"/>
+            <point key="canvasLocation" x="1445.5999999999999" y="-545.57721139430294"/>
         </scene>
         <!--Photo View Controller-->
         <scene sceneID="Za1-lc-8yN">
@@ -46,20 +40,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="55I-x6-e9c">
-                                <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="goBack:" destination="jgG-XR-ZoP" eventType="touchUpInside" id="BNj-2Q-eVM"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hYn-TQ-3gC">
-                                <rect key="frame" x="0.0" y="38" width="375" height="629"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hYn-TQ-3gC">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hYn-TQ-3gC" firstAttribute="leading" secondItem="wu7-YA-7Sj" secondAttribute="leading" id="4OY-Yy-fRD"/>
+                            <constraint firstItem="hYn-TQ-3gC" firstAttribute="top" secondItem="wu7-YA-7Sj" secondAttribute="top" id="AWl-BR-IUR"/>
+                            <constraint firstItem="VpY-WJ-6gi" firstAttribute="top" secondItem="hYn-TQ-3gC" secondAttribute="bottom" id="EUX-CL-7uH"/>
+                            <constraint firstAttribute="trailing" secondItem="hYn-TQ-3gC" secondAttribute="trailing" id="x5j-FO-qDM"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="hYn-TQ-3gC" id="TFG-Sl-Yc0"/>
@@ -67,25 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kka-dS-Vfo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2385" y="-545"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="qFJ-tu-4Tn">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0Ij-QB-7Lp" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="E04-5e-aaz">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="IlH-sL-pBk"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="a7p-yz-ghm" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="552.79999999999995" y="-543.77811094452773"/>
+            <point key="canvasLocation" x="2384.8000000000002" y="-545.57721139430294"/>
         </scene>
     </scenes>
 </document>
