--- a/EyeBot/EyeBot/Base.lproj/Main.storyboard
+++ b/EyeBot/EyeBot/Base.lproj/Main.storyboard
@@ -38,25 +38,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="predictionCell" id="BdZ-3U-Y31" customClass="PredictionTableViewCell" customModule="EyeBot" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="predictionCell" id="BdZ-3U-Y31" customClass="PredictionTableViewCell" customModule="EyeBot" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BdZ-3U-Y31" id="ny5-xr-6yb">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kt0-QY-ovh">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kt0-QY-ovh">
                                             <rect key="frame" x="8" y="8" width="90" height="84"/>
                                             <gestureRecognizers/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="90" id="bDX-Fh-wxQ"/>
                                             </constraints>
-                                            <connections>
-                                                <outletCollection property="gestureRecognizers" destination="gOk-je-YBR" appends="YES" id="FGT-xP-RF3"/>
-                                            </connections>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMQ-4J-IpT">
-                                            <rect key="frame" x="106" y="8" width="261" height="84"/>
+                                            <rect key="frame" x="118" y="8" width="249" height="84"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -66,7 +63,7 @@
                                         <constraint firstItem="Kt0-QY-ovh" firstAttribute="leading" secondItem="ny5-xr-6yb" secondAttribute="leadingMargin" id="DgV-fy-8xK"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="hMQ-4J-IpT" secondAttribute="bottom" id="SUd-iP-eLk"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="Kt0-QY-ovh" secondAttribute="bottom" id="a96-A6-Bd5"/>
-                                        <constraint firstItem="hMQ-4J-IpT" firstAttribute="leading" secondItem="Kt0-QY-ovh" secondAttribute="trailing" constant="8" id="aaN-p6-16X"/>
+                                        <constraint firstItem="hMQ-4J-IpT" firstAttribute="leading" secondItem="Kt0-QY-ovh" secondAttribute="trailing" constant="20" id="aaN-p6-16X"/>
                                         <constraint firstItem="Kt0-QY-ovh" firstAttribute="top" secondItem="ny5-xr-6yb" secondAttribute="topMargin" id="kMD-73-e8U"/>
                                         <constraint firstItem="hMQ-4J-IpT" firstAttribute="trailing" secondItem="ny5-xr-6yb" secondAttribute="trailingMargin" id="riS-PU-mlg"/>
                                         <constraint firstItem="hMQ-4J-IpT" firstAttribute="top" secondItem="ny5-xr-6yb" secondAttribute="topMargin" id="v9e-2a-eid"/>
@@ -92,18 +89,13 @@
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bLe-EY-D2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="gOk-je-YBR">
-                    <connections>
-                        <segue destination="wAI-Su-oZG" kind="presentation" id="aNv-Yw-AB3"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2384.8000000000002" y="143.47826086956522"/>
         </scene>
         <!--Prediction Detail View Controller-->
         <scene sceneID="j4g-2c-j4W">
             <objects>
-                <viewController id="wAI-Su-oZG" customClass="PredictionDetailViewController" customModule="EyeBot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="predictionDetail" id="wAI-Su-oZG" customClass="PredictionDetailViewController" customModule="EyeBot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="i5A-fd-PA9"/>
                         <viewControllerLayoutGuide type="bottom" id="2vI-Xl-tBV"/>
@@ -112,7 +104,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NBg-Sc-51w">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NBg-Sc-51w">
                                 <rect key="frame" x="16" y="20" width="343" height="647"/>
                             </imageView>
                         </subviews>
