--- a/EyeBot/EyeBot/Base.lproj/Main.storyboard
+++ b/EyeBot/EyeBot/Base.lproj/Main.storyboard
@@ -46,6 +46,24 @@
             </objects>
             <point key="canvasLocation" x="2405" y="-565"/>
         </scene>
+        <!--Wire Selector View Controller-->
+        <scene sceneID="zOh-ey-0bU">
+            <objects>
+                <viewController storyboardIdentifier="wireSelectorViewController" id="VQe-U8-Qfv" customClass="WireSelectorViewController" customModule="EyeBot" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="N6l-Dk-cvc"/>
+                        <viewControllerLayoutGuide type="bottom" id="21z-Mv-muK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="exh-i5-mh2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lfb-Zn-KjJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3206" y="-565"/>
+        </scene>
         <!--predictionsTableViewController-->
         <scene sceneID="AeW-UB-sRX">
             <objects>
